--- a/Calenders/index.html
+++ b/Calenders/index.html
@@ -62,3 +62,63 @@
     }
 
     .event.left::before {
+    right: -28px;
+    }
+
+    .event.right {
+      left: 55%;
+    }
+
+    .event.right::before {
+      left: -28px;
+    }
+
+    h3 {
+      margin: 0 0 10px;
+      color: #333;
+    }
+
+    p {
+      margin: 0;
+      font-size: 14px;
+      color: #555;
+    }
+  </style>
+</head>
+<body>
+
+  <div class="timeline">
+    <div class="event left">
+      <h3>ورشة الخط العربي</h3>
+      <p>الإثنين، الساعة 6 مساءً</p>
+    </div>
+
+    <div class="event right">
+      <h3>أمسية شعرية</h3>
+      <p>الثلاثاء، الساعة 7 مساءً</p>
+    </div>
+
+    <div class="event left">
+      <h3>ندوة ثقافية</h3>
+      <p>الأربعاء، الساعة 5 مساءً</p>
+    </div>
+
+    <div class="event right">
+      <h3>حوار مفتوح عن التراث</h3>
+      <p>الخميس، الساعة 8 مساءً</p>
+    </div>
+  </div>
+
+</body>
+</html>
+```
+
+---
+
+💡 مميزات هذا النموذج:
+- متجاوب ويعمل على جميع الشاشات.
+- بسيط وبدون صور.
+- مظهر أنيق لجمهور مثقف.
+- يمكن إضافة تأثيرات أو نوافذ منبثقة لاحقًا.
+
+هل ترغب بإضافة تفاعل عند النقر على الحدث لعرض تفاصيل أكثر؟
